--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.0",
     "@google/genai": "^1.28.0",
     "chart.js": "^4.4.3",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "xlsx": "0.18.5",
+    "chartjs-plugin-zoom": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
