--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "can-log-converter-&-analyzer",
+  "name": "can-log-analyzer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "@google/genai": "^1.28.0",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "react": "^19.2.0",
     "react-chartjs-2": "^5.2.0",
-    "xlsx": "0.18.5",
-    "chartjs-plugin-zoom": "^2.0.1"
+    "react-dom": "^19.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
